# EmbeddedDeformationGraphVR

./: CMakeLists.txt  PhongFragment.frag  PhongShader.vert  README.md
ANN/: bd_tree.h
deformation/: ClosestPoint.cc  ClosestPoint.hh  Deformation.cc  Deformation.hh  EDVR_opengl_main.cc
gmm/: gmm_blas.h
isoex/Extractors/: MarchingCubesT.cc  MarchingCubesT.hh
isoex/Grids/: ScalarGridT.cc
lib/Debug/: ann.lib  isoex.lib
viewer/: QualityViewer.cc  QualityViewer.hh  gl.hh
